snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.module.sha512
c43515e9ca55ad0faf44c8ad8fea0191837bd70b269e7b1ddd266652f96962623b0c944a70b88d472a7cc24b77a89f925f2a34b5c6f0f0f307d36fff3064d39a